force-app/main/default/objects/Product2/fields/E2E_Symphony_Coinsurance_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>E2E_Symphony_Coinsurance_Pharmacy__c</fullName>
    <description>E2E Symphony field for POC - Coinsurance is an attribute of a plan</description>
    <label>Coinsurance (Pharmacy Included)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>