force-app/main/default/objects/Product2/fields/E2E_Symphony_Deductible__c.field-meta.xml
<CustomField>
    <fullName>E2E_Symphony_Deductible__c</fullName>
    <description>E2E Symphony field for POC - Deductible field is an attribute of a plan</description>
    <label>Individual Deductible In-Network</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>