force-app/main/default/objects/Product2/fields/E2E_SYMPHONY_DEDUCTIBLE_FAMILY__c.field-meta.xml
<CustomField>
    <fullName>E2E_SYMPHONY_DEDUCTIBLE_FAMILY__c</fullName>
    <label>Deductible - Family</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>