force-app/main/default/objects/Product2/fields/E2E_SYMPHONY_IN_PATIENT_HOSP_COIN__c.field-meta.xml
<CustomField>
    <fullName>E2E_SYMPHONY_IN_PATIENT_HOSP_COIN__c</fullName>
    <label>In Patient Hospital - Co Insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>