force-app/main/default/objects/Product2/fields/E2E_Symphony_Maximum_Out_of_Pocket__c.field-meta.xml
<CustomField>
    <fullName>E2E_Symphony_Maximum_Out_of_Pocket__c</fullName>
    <description>E2E Symphony field for POC - Maximum Out of Pocket is an attribute of a plan</description>
    <label>Maximum Out of Pocket</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>