force-app/main/default/objects/Product2/fields/E2E_SYMPHONY_MAXIMUM_OUT_OF_POCKET_FAMIL__c.field-meta.xml
<CustomField>
    <fullName>E2E_SYMPHONY_MAXIMUM_OUT_OF_POCKET_FAMIL__c</fullName>
    <label>Maximum Out of Pocket - Family</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>