force-app/main/default/objects/Product2/fields/E2E_SYMPHONY_OFF_VISIT_PCP_COPAY__c.field-meta.xml
<CustomField>
    <fullName>E2E_SYMPHONY_OFF_VISIT_PCP_COPAY__c</fullName>
    <label>Office Visit PCP - Co Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>