force-app/main/default/objects/Product2/fields/E2E_Symphony_Pharmacy_Included__c.field-meta.xml
<CustomField>
    <fullName>E2E_Symphony_Pharmacy_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pharmacy Included</label>
    <type>Checkbox</type>
</CustomField>