force-app/main/default/objects/Product2/fields/E2E_Symphony_Preventative_Drugs_Covered__c.field-meta.xml
<CustomField>
    <fullName>E2E_Symphony_Preventative_Drugs_Covered__c</fullName>
    <description>E2E Symphony field for POC - Preventative Drugs Covered is an attribute of a plan</description>
    <label>Preventative Drugs Covered (Pharmacy)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>