force-app/main/default/objects/Product2/fields/E2E_SYMPHONY_URGENT_CARE_CO_PAY__c.field-meta.xml
<CustomField>
    <fullName>E2E_SYMPHONY_URGENT_CARE_CO_PAY__c</fullName>
    <label>Urgent Care - Co Pay</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>